# vibe-trade-execution

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.lean  Dockerfile.lean-service  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE-AND-LOCAL-RUN.md
lean/Algorithms/: EmaCrossoverBacktest.py  EmaCrossoverCsvBacktest.py  EmaDeterministicTest.py  SimpleMaCrossover.py  SimpleMomentum.py  StrategyRuntime.py
lean/Data/: btc_usd_hourly.csv
lean/DataFeeds/: PubSubCandle.py  PubSubDataQueueHandler.cs  PubSubDataQueueHandler.csproj  PubSubDataQueueHandler.py  __init__.py
lean/config/: config.json
lean/strategies/demo-1/: algorithm.py
scripts/: run_cloud_backtest.py  test_backtest_service.py  test_multiple_strategies.py  test_real_strategies.py  verify_pipeline.py
src/: __init__.py  main.py
src/lean_runner/: __init__.py  cli.py  container_manager.py  engine.py
src/models/: backtest_result.py  lean_backtest.py
src/routes/: __init__.py  backtest.py
src/service/: __init__.py  backtest_service.py  bigquery_data_service.py  cloud_run_job_service.py  data_service.py  result_parser.py
src/translator/: __init__.py  archetype_expander.py  context.py  errors.py  evaluator.py  ir.py  ir_translator.py  ir_validator.py  pipeline.py  regime_lowering.py  translator.py
src/translator/builders/: __init__.py  action_builder.py
src/translator/compiler/: __init__.py  condition_builder.py  context.py  indicator_resolver.py  state_collector.py
src/translator/registries/: __init__.py  indicators.py  regimes.py
src/translator/visitors/: __init__.py  base.py  indicator_collector.py  regime_lowerer.py  state_extractor.py
tests/: __init__.py  conftest.py  synthetic_data.py  test_archetype_coverage.py  test_archetype_translation.py  test_benchmark.py  test_cross_validation.py  test_data_architecture.py  test_data_service.py  test_e2e_prototype.py  test_end_to_end.py  test_evaluator.py  test_event_archetypes.py  test_expander.py  test_integration.py  test_ir_translation.py  test_ir_translator.py  test_lean_backtest_integration.py  test_lean_e2e.py  test_regime_lowering.py  test_simulation.py  test_statistics_validation.py  test_strategy_simulation.py  test_synthetic_scenarios.py  test_translator.py  test_warmup_calculation.py  test_warmup_helpers.py
tests/compiler/: test_condition_builder.py  test_context.py  test_indicator_resolver.py  test_no_model_dump.py  test_no_to_ir.py  test_state_collector.py
tests/e2e/: test_archetype_e2e.py  test_backtest_e2e.py  test_backtest_regression.py
tests/fixtures/: btc_deterministic.csv  e2e_allof.csv  e2e_anyof.csv  e2e_breakout.csv  e2e_momentum.csv  e2e_multi_exit.csv  e2e_nested.csv  e2e_not.csv  e2e_reversion.csv  e2e_trend.csv
tests/translator/: test_action_builder.py  test_context.py  test_indicator_collector.py  test_indicator_registry.py  test_new_translator.py  test_pipeline.py  test_regime_lowerer_visitor.py  test_regime_registry.py  test_state_extractor.py  test_visitor_base.py
