[project]
name = "vibe-trade-execution"
version = "0.1.0"
description = "Execution engine for trading strategies based on schema definitions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.20.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-run>=0.10.0",
    "google-cloud-storage>=2.14.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "fastavro>=1.9.0",
    "pydantic>=2.0.0",
    "vibe-trade-shared",
    "google-cloud-bigquery>=3.40.0",
]
authors = [
    {name = "Vibe Trade", email = "dev@vibe-trade.com"},
]
license = {text = "MIT"}
keywords = ["trading", "lean", "execution", "strategy", "quantconnect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "ruff>=0.6.0",
    "vibe-trade-lean",  # For LEAN e2e test utilities
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "e2e: marks tests as end-to-end (requires LEAN container, deselect with '-m \"not e2e\"')",
    "smoke: marks representative smoke tests for quick validation (~15 tests, ~2 min)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "lean/",  # LEAN algorithms have special imports that don't work with standard linting
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 60

[tool.uv.sources]
vibe-trade-shared = { path = "../vibe-trade-shared", editable = true }
vibe-trade-lean = { path = "../vibe-trade-lean", editable = true }  # For test utilities
